# research-radar

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/skills/paper-analyze/: SKILL.md
.agents/skills/paper-analyze/evals/: evals.json
.agents/skills/research-radar/: SKILL.md
.agents/skills/research-radar/evals/: evals.json
.agents/skills/research-radar/references/: evidence-and-failure-rules.md
.github/workflows/: tests.yml
configs/: __init__.py  blank.json  ci3.json
docs/: ADAPTERS.md  CONFIGURATION.md  PRIVACY.md  QUICKSTART.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  TROUBLESHOOTING.md  UPSTREAM.md
docs/superpowers/plans/: 2026-07-21-research-radar-public-release.md
docs/superpowers/specs/: 2026-07-21-research-radar-public-release-design.md
examples/: 2026-07-21-sample-brief.md
presentation/: Research-Radar-分享版_v0.1.0.pptx  六页分享讲稿.md
research_radar/: __init__.py  __main__.py  cli.py  config.py  delivery.py  http.py  models.py  pipeline.py  render.py  state.py
research_radar/adapters/: __init__.py  arxiv.py  base.py  crossref.py  feeds.py  openalex.py  semantic_scholar.py  webpage.py
tests/: test_adapters.py  test_config.py  test_delivery.py  test_models_pipeline.py
tests/fixtures/: arxiv.xml  crossref.json  feed.xml  page.html
