[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ci3-research-radar"
version = "0.1.2"
description = "A configurable, evidence-bounded daily research radar for Codex and Obsidian"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "JBMovingCastle" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
research-radar = "research_radar.cli:main"

[tool.setuptools.packages.find]
include = ["research_radar*", "configs*"]

[tool.setuptools.package-data]
configs = ["*.json"]
